[gd_scene load_steps=16 format=3 uid="uid://b0p0u3r7kpukv"]

[ext_resource type="Script" uid="uid://dju7dfnm11vtn" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bixen0w3g8a4q" path="res://assets/images/menu_bg.png" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://ctwi4qwh36a4i" path="res://assets/fonts/Game of Brush.ttf" id="2_bqqt6"]
[ext_resource type="Script" uid="uid://bvpx7viruyp28" path="res://scripts/audio_control.gd" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://bvcyr2wts3f58" path="res://assets/audios/rpgbg.wav" id="4_wu84c"]
[ext_resource type="Script" uid="uid://dnrdgnxfyw6s3" path="res://scripts/full_screen_control.gd" id="5_rtw2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("1_ekxnf")
modulate_color = Color(0.40705642, 0.40705612, 0.40705603, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.1428582, 0.14285827, 0.14285818, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(1, 1, 1, 1)
grow_begin = -2.0
grow_end = -2.0
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(0.15122518, 0.1546844, 0.75774646, 1)
thickness = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.125
offset_top = -255.5
offset_right = 156.125
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_tbmy8")
text = "Start Game"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
text = "Options"

[node name="Button4" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
text = "Credits"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_bqqt6")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.40625
anchor_top = 0.1328889
anchor_right = 0.6020833
anchor_bottom = 0.3680741
offset_left = -182.0
offset_top = -50.760002
offset_right = 182.0
offset_bottom = 50.239998
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.98434705, 0.9849954, 0.98980325, 0)
theme_override_colors/font_outline_color = Color(0.6787591, 0, 0.09365965, 1)
theme_override_constants/shadow_offset_x = 27
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 60
text = "GREETING

PLAYER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.75
offset_top = -188.25
offset_right = 299.75
offset_bottom = 188.25
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oa1go")

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.375
offset_top = -74.125
offset_right = 193.375
offset_bottom = 74.125
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicLabel" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_8ln24")
audio_bus_name = "Music"

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="FullScreenControl" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Full Screen"
script = ExtResource("5_rtw2f")

[node name="TitleOptions" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 2.25
offset_bottom = 75.25
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 28
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.1875
offset_top = -85.75
offset_right = 87.1875
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rtw2f")
text = "BACK"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wu84c")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/AudioControl" to="Options/VBoxContainer/HBoxContainer/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer2/FullScreenControl" to="Options/VBoxContainer/HBoxContainer2/FullScreenControl" method="_on_toggled"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
